--- a/photo_gallery/public/stylesheets/gallery.css
+++ b/photo_gallery/public/stylesheets/gallery.css
@@ -69,7 +69,9 @@ a.favorite {
 }
 
 #slides figure + figure {
-  display: none;
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+};
 }
 
 #slides img {
