--- a/booking_app_node/public/stylesheets/style.css
+++ b/booking_app_node/public/stylesheets/style.css
@@ -55,3 +55,51 @@ button:hover {
     min-width: auto;
   }
 }
+
+select {
+  max-width: 400px;
+}
+
+.dropdown {
+  max-width: 400px;
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  background-color: #f9f9f9;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.dropdown:hover {
+  background-color: #9c9898;
+}
+
+.divDropdown {
+  max-width: 400px;
+  position: relative;
+  flex-direction: column;
+  cursor: pointer;
+  background-color: #f9f9f9;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  z-index: 1;
+}
+/* 
+.dropdown-content .divDropdown {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+} */
+
+.dropdown-content .divDropdown:hover {
+  background-color: #f1f1f1;
+}
+
+[hidden] {
+  display: none !important;
+}
