--- a/form_validation/validation.css
+++ b/form_validation/validation.css
@@ -24,6 +24,6 @@ label {
 
 .credit-field {
   display: inline;
-  max-width: 8vw;
-  min-width: 5vw;
+  max-width: 2.5rem;
+  min-width: 2.5rem;
 }
