added editing of contacts

--- a/contact_manager_node/public/stylesheets/index.css
+++ b/contact_manager_node/public/stylesheets/index.css
@@ -88,6 +88,12 @@ form input {
   background-color: rgb(175, 175, 160);
 }
 
+.error {
+  color: darkred;
+  background-color: rgb(202, 128, 142);
+  font-size: smaller;
+}
+
 #contact_search_bar {
   display: inline;
   padding: 13px;
